# sing_like_coding

./: .dir-locals.el  .gitignore  Cargo.toml  Makefile  README.md  TODO.md
common/: Cargo.toml
common/src/: audio_buffer.rs  clap_manager.rs  dsp.rs  event.rs  lib.rs  module.rs  plugin.rs  plugin_ref.rs  process_data.rs  process_track_context.rs  protocol.rs  shmem.rs  str.rs  util.rs
common/src/plugin/: description.rs  param.rs
sing_like_coding/: Cargo.toml
sing_like_coding/src/: a.rs  app.rs  app_state.rs  command.rs  commander.rs  comminicator.rs  communicator.rs  config.rs  device.rs  eval.rs  event_list.rs  lib.rs  main.rs  midi.rs  midi_device.rs  model.rs  plugin_comminicator.rs  plugin_ref.rs  singer.rs  song_state.rs  undo_history.rs  util.rs  view.rs
sing_like_coding/src/command/: midi_device_input.rs  plugin_load.rs  plugin_scan.rs  song_open.rs  song_save.rs  track_add.rs
sing_like_coding/src/model/: lane.rs  lane_item.rs  note.rs  point.rs  song.rs  track.rs
sing_like_coding/src/view/: command_view.rs  db_slider.rs  eval_window.rs  knob.rs  main_view.rs  param_select_view.rs  plugin_select_view.rs  query_view.rs  root_view.rs  select_view.rs  shortcut_key.rs  sidechain_select_view.rs  stereo_peak_meter.rs  track_view.rs  util.rs  view_state.rs
sing_like_coding_plugin/: Cargo.toml
sing_like_coding_plugin/src/: app.rs  audio_buffer.rs  clap_manager.rs  comminicator.rs  communicator.rs  event_list.rs  host.rs  lib.rs  main.rs  main_comminicator.rs  manager.rs  plugin.rs  plugin_host.rs  plugin_ptr.rs  process_track_context.rs  singer.rs  view.rs
sing_like_coding_plugin/src/command/: track_add.rs
sing_like_coding_plugin/src/model/: song.rs
sing_like_coding_plugin/src/plugin/: stream.rs  window.rs
sing_like_coding_plugin/src/view/: main_view.rs  track_view.rs
src/: README.md  app.rs  audio_buffer.rs  audio_process.rs  clap_manager.rs  command.rs  commander.rs  device.rs  event.rs  lib.rs  main.rs  model.rs  note.rs  plugin.rs  process_context.rs  process_track_context.rs  singer.rs  song.rs  track.rs  track_view.rs  util.rs  view.rs
src/command/: plugin_load.rs  plugin_scan.rs
src/model/: module.rs  song.rs  track.rs
src/plugin/: window.rs
src/view/: command_view.rs  main_view.rs  query_view.rs  track_view.rs  view_state.rs
