[package]
name = "sawavi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap-sys = "0.5.0"
cpal = "0.15.3"
eframe = "0.31.1"
egui_extras = "0.31.1"
env_logger = "0.11.8"
libloading = "0.8.7"
log = "0.4.27"
windows = { version = "0.61.1", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader"
] }
