[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
bincode = "2.0"
serde = { version = "1", features = ["derive"] }
shared_memory = "0.12.4"
tokio = { version = "1.45.1", features = ["full"] }
windows = { version = "0.61.1", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_IO",
  "Win32_System_LibraryLoader",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
] }
